corrected prob_data calculations

--- a/bayesian_made_simple/cookie_01.ipynb
+++ b/bayesian_made_simple/cookie_01.ipynb
@@ -165,6 +165,260 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-17T05:42:20.510263Z",
+     "start_time": "2021-05-17T05:42:20.446391Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>priors</th>\n",
+       "      <th>likelihood</th>\n",
+       "      <th>unnormalized_posterior</th>\n",
+       "      <th>prob_data</th>\n",
+       "      <th>posterior</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Bowl_1</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.375</td>\n",
+       "      <td>0.625</td>\n",
+       "      <td>0.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bowl_2</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.250</td>\n",
+       "      <td>0.625</td>\n",
+       "      <td>0.4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        priors  likelihood  unnormalized_posterior  prob_data  posterior\n",
+       "Bowl_1     0.5        0.75                   0.375      0.625        0.6\n",
+       "Bowl_2     0.5        0.50                   0.250      0.625        0.4"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "priors = [1/2, 1/2]\n",
+    "priors_index = ['Bowl_1', 'Bowl_2']\n",
+    "likelihood = [30/40, 10/20]\n",
+    "new_df = pd.DataFrame()\n",
+    "new_df['priors'] = priors\n",
+    "new_df['likelihood'] = likelihood\n",
+    "new_df.index = priors_index\n",
+    "new_df['unnormalized_posterior'] = new_df['priors'] * new_df['likelihood']\n",
+    "new_df['prob_data'] = [sum(new_df['unnormalized_posterior']) for num in range(len(new_df))]\n",
+    "new_df['posterior'] = (new_df['priors'] * new_df['likelihood']) / new_df['prob_data']\n",
+    "new_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 1\n",
+    "\n",
+    "Suppose we put the first cookie back, stir, draw another cookie from the same bowl, and it's a chocolate cookie. What is the probability we drew both cookies from Bowl 1?\n",
+    "\n",
+    "Hint: The prior for the second update is the posterior from the first update."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-16T14:43:30.044856Z",
+     "start_time": "2021-05-16T14:43:30.030299Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# first update\n",
+    "p_h_1 = 1/2\n",
+    "p_d_h_1 = 3/4\n",
+    "p_d_1 = 5/8\n",
+    "p_h_d_1 = (p_h_1 * p_d_h_1) / p_d_1\n",
+    "p_h_d_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-16T14:43:32.090131Z",
+     "start_time": "2021-05-16T14:43:32.079525Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.39999999999999997"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_h_2 = p_h_d_1\n",
+    "p_d_h_2 = 1/4\n",
+    "p_d_2 = 3/8\n",
+    "p_h_d_2 = (p_h_2 * p_d_h_2) / p_d_2\n",
+    "p_h_d_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-16T14:44:48.181160Z",
+     "start_time": "2021-05-16T14:44:48.175625Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.15"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.6*0.25"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-17T04:42:59.546384Z",
+     "start_time": "2021-05-17T04:42:59.528406Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.72"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(0.6*0.75)/(1 - 0.375)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-17T04:42:57.377225Z",
+     "start_time": "2021-05-17T04:42:57.368185Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.39999999999999997"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(0.6*0.25)/(0.375)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-17T05:07:19.402023Z",
+     "start_time": "2021-05-17T05:07:19.350162Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "((0.6*0.75) + (0.6*0.25))*0.5"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
