exercise_1 completed with two steps

--- a/bayesian_made_simple/cookie_01.ipynb
+++ b/bayesian_made_simple/cookie_01.ipynb
@@ -56,120 +56,40 @@
    },
    "outputs": [],
    "source": [
-    "number_of_bowls = 2\n",
-    "bowl_qty_list = [40,40]\n",
-    "vanilla_bowl_list = [30, 20]\n",
-    "chocolate_bowl_list = [30, 20]"
+    "priors = [1/2, 1/2]\n",
+    "priors_index = ['Bowl_1', 'Bowl_2']\n",
+    "likelihood = [30/40, 10/20]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 50,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-16T12:55:43.330502Z",
-     "start_time": "2021-05-16T12:55:43.304725Z"
+     "end_time": "2021-05-17T05:46:40.922207Z",
+     "start_time": "2021-05-17T05:46:40.904482Z"
     }
    },
    "outputs": [],
    "source": [
-    "def get_posterior(number_of_bowls, bowl_qty_list, vanilla_bowl_list, chocolate_bowl_list):\n",
-    "    prior_probabilities = [1/(number_of_bowls) for num in range(number_of_bowls)]\n",
-    "    vanilla_unnormalized_probs = [van/bowl_qty_list[index] for index, van in enumerate(vanilla_bowl_list)] \n",
-    "    vanilla_normalized_sum  = sum(vanilla_unnormalized_probs)/ len(vanilla_unnormalized_probs)\n",
-    "    vanilla_normalized_sum_list = [vanilla_normalized_sum for van in range(len(vanilla_unnormalized_probs))]\n",
+    "def get_posterior(priors, priors_index, likelihood):\n",
     "    new_df = pd.DataFrame()\n",
-    "    new_df['prior_probabilities'] = prior_probabilities\n",
-    "    new_df['vanilla_unnormalized_probs'] = vanilla_unnormalized_probs\n",
-    "    new_df['vanilla_normalized_sum_list'] = vanilla_normalized_sum_list\n",
-    "    new_df.index = [f'Bowl_{num+1}' for num in range(number_of_bowls)]\n",
-    "    new_df['posterior'] = (new_df['prior_probabilities'] * new_df['vanilla_unnormalized_probs']) / new_df['vanilla_normalized_sum_list']\n",
+    "    new_df['priors'] = priors\n",
+    "    new_df['likelihood'] = likelihood\n",
+    "    new_df.index = priors_index\n",
+    "    new_df['unnormalized_posterior'] = new_df['priors'] * new_df['likelihood']\n",
+    "    new_df['prob_data'] = [sum(new_df['unnormalized_posterior']) for num in range(len(new_df))]\n",
+    "    new_df['posterior'] = (new_df['priors'] * new_df['likelihood']) / new_df['prob_data']\n",
     "    return new_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 51,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-16T12:56:38.004986Z",
-     "start_time": "2021-05-16T12:56:37.982534Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>prior_probabilities</th>\n",
-       "      <th>vanilla_unnormalized_probs</th>\n",
-       "      <th>vanilla_normalized_sum_list</th>\n",
-       "      <th>posterior</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Bowl_1</th>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.75</td>\n",
-       "      <td>0.625</td>\n",
-       "      <td>0.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Bowl_2</th>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.50</td>\n",
-       "      <td>0.625</td>\n",
-       "      <td>0.4</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        prior_probabilities  vanilla_unnormalized_probs  \\\n",
-       "Bowl_1                  0.5                        0.75   \n",
-       "Bowl_2                  0.5                        0.50   \n",
-       "\n",
-       "        vanilla_normalized_sum_list  posterior  \n",
-       "Bowl_1                        0.625        0.6  \n",
-       "Bowl_2                        0.625        0.4  "
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "new_df = get_posterior(number_of_bowls, bowl_qty_list, vanilla_bowl_list, chocolate_bowl_list)\n",
-    "new_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-05-17T05:42:20.510263Z",
-     "start_time": "2021-05-17T05:42:20.446391Z"
+     "end_time": "2021-05-17T05:46:53.202310Z",
+     "start_time": "2021-05-17T05:46:53.155775Z"
     }
    },
    "outputs": [
@@ -228,22 +148,13 @@
        "Bowl_2     0.5        0.50                   0.250      0.625        0.4"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "priors = [1/2, 1/2]\n",
-    "priors_index = ['Bowl_1', 'Bowl_2']\n",
-    "likelihood = [30/40, 10/20]\n",
-    "new_df = pd.DataFrame()\n",
-    "new_df['priors'] = priors\n",
-    "new_df['likelihood'] = likelihood\n",
-    "new_df.index = priors_index\n",
-    "new_df['unnormalized_posterior'] = new_df['priors'] * new_df['likelihood']\n",
-    "new_df['prob_data'] = [sum(new_df['unnormalized_posterior']) for num in range(len(new_df))]\n",
-    "new_df['posterior'] = (new_df['priors'] * new_df['likelihood']) / new_df['prob_data']\n",
+    "new_df = get_posterior(priors, priors_index, likelihood)\n",
     "new_df"
    ]
   },
@@ -260,32 +171,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 52,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-16T14:43:30.044856Z",
-     "start_time": "2021-05-16T14:43:30.030299Z"
+     "end_time": "2021-05-17T05:51:10.063712Z",
+     "start_time": "2021-05-17T05:51:10.019303Z"
     }
    },
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>priors</th>\n",
+       "      <th>likelihood</th>\n",
+       "      <th>unnormalized_posterior</th>\n",
+       "      <th>prob_data</th>\n",
+       "      <th>posterior</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Bowl_1</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.375</td>\n",
+       "      <td>0.625</td>\n",
+       "      <td>0.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bowl_2</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.250</td>\n",
+       "      <td>0.625</td>\n",
+       "      <td>0.4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "0.6"
+       "        priors  likelihood  unnormalized_posterior  prob_data  posterior\n",
+       "Bowl_1     0.5        0.75                   0.375      0.625        0.6\n",
+       "Bowl_2     0.5        0.50                   0.250      0.625        0.4"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# first update\n",
-    "p_h_1 = 1/2\n",
-    "p_d_h_1 = 3/4\n",
-    "p_d_1 = 5/8\n",
-    "p_h_d_1 = (p_h_1 * p_d_h_1) / p_d_1\n",
-    "p_h_d_1"
+    "# first update it is for vanilla\n",
+    "priors = [1/2, 1/2]\n",
+    "priors_index = ['Bowl_1', 'Bowl_2']\n",
+    "likelihood = [30/40, 10/20]\n",
+    "new_df = get_posterior(priors, priors_index, likelihood)\n",
+    "new_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# second update in which chocolate was found\n",
+    "priors = new_df['posterior']\n",
+    "priors_index = ['Bowl_1', 'Bowl_2']\n",
+    "likelihood = [30/40, 10/20]\n",
+    "new_df = get_posterior(priors, priors_index, likelihood)\n",
+    "new_df"
    ]
   },
   {
