function for plausible values

--- a/bayesian_made_simple/Bayesian_Modeling_without_math/Untitled.ipynb
+++ b/bayesian_made_simple/Bayesian_Modeling_without_math/Untitled.ipynb
@@ -32,10 +32,67 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-23T11:06:56.618636Z",
+     "start_time": "2021-05-23T11:06:56.609803Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def get_plausible_values(observed):\n",
+    "    with pm.Model() as model_a:\n",
+    "        # Parameter = prior solution space\n",
+    "        conversion_rate = pm.Beta(name='conversion_rate_a',\n",
+    "                              alpha=2, \n",
+    "                              beta=10)\n",
+    "\n",
+    "        # Evaluator = likelihodd function\n",
+    "        how_likely = pm.Binomial(name = 'how_likely', \n",
+    "                                 n = 100, \n",
+    "                                 p = conversion_rate, \n",
+    "                                 observed = observed)\n",
+    "\n",
+    "        # Posterior solution space\n",
+    "        plausible_values_a = pm.sample()\n",
+    "    return plausible_values_a"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2021-05-23T10:59:04.203Z"
+     "start_time": "2021-05-23T11:07:21.724Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Arjun Janamatti\\Anaconda3\\envs\\tf_nptel\\lib\\site-packages\\pymc3\\sampling.py:468: FutureWarning: In an upcoming release, pm.sample will return an `arviz.InferenceData` object instead of a `MultiTrace` by default. You can pass return_inferencedata=True or return_inferencedata=False to be safe and silence this warning.\n",
+      "  FutureWarning,\n",
+      "Auto-assigning NUTS sampler...\n",
+      "Initializing NUTS using jitter+adapt_diag...\n",
+      "Multiprocess sampling (4 chains in 4 jobs)\n",
+      "NUTS: [conversion_rate_a]\n"
+     ]
+    }
+   ],
+   "source": [
+    "plausible_values_a = get_plausible_values(observed=7)\n",
+    "plausible_values_b = get_plausible_values(observed=17)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-23T10:59:39.473526Z",
+     "start_time": "2021-05-23T10:59:04.206262Z"
     }
    },
    "outputs": [
@@ -68,8 +125,8 @@
        "                background: #F44336;\n",
        "            }\n",
        "        </style>\n",
-       "      <progress value='2197' class='' max='8000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      27.46% [2197/8000 00:03<00:08 Sampling 4 chains, 0 divergences]\n",
+       "      <progress value='8000' class='' max='8000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      100.00% [8000/8000 00:12<00:00 Sampling 4 chains, 0 divergences]\n",
        "    </div>\n",
        "    "
       ],
@@ -79,6 +136,15 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Sampling 4 chains for 1_000 tune and 1_000 draw iterations (4_000 + 4_000 draws total) took 31 seconds.\n",
+      "The acceptance probability does not match the target. It is 0.880973690623816, but should be close to 0.8. Try to increase the number of tuning steps.\n",
+      "The acceptance probability does not match the target. It is 0.8899293872194785, but should be close to 0.8. Try to increase the number of tuning steps.\n"
+     ]
     }
    ],
    "source": [
@@ -100,10 +166,70 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-23T11:02:24.886666Z",
+     "start_time": "2021-05-23T11:02:24.867200Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True,  True,  True, ...,  True,  True,  True])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# how many number of conversion rates are smaller than 0.1\n",
+    "plausible_values_a['conversion_rate_a'] < 0.1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-23T11:02:39.149568Z",
+     "start_time": "2021-05-23T11:02:39.135554Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7845"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(plausible_values_a['conversion_rate_a'] < 0.1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 78.45% probability that the conversion rate is less than 10 %"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a_lt_b = plausible_values_a"
+   ]
   }
  ],
  "metadata": {
