function for plausible values

--- a/bayesian_made_simple/Bayesian_Modeling_without_math/Untitled.ipynb
+++ b/bayesian_made_simple/Bayesian_Modeling_without_math/Untitled.ipynb
@@ -2,49 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-23T10:51:56.714243Z",
-     "start_time": "2021-05-23T10:51:52.825947Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Arjun Janamatti\\Anaconda3\\envs\\tf_nptel\\lib\\site-packages\\numpy\\core\\__init__.py:29: UserWarning: loaded more than 1 DLL from .libs:\n",
-      "C:\\Users\\Arjun Janamatti\\Anaconda3\\envs\\tf_nptel\\lib\\site-packages\\numpy\\.libs\\libopenblas.PYQHXLVVQ7VESDPUVUADXEVJOBGHJPAY.gfortran-win_amd64.dll\n",
-      "C:\\Users\\Arjun Janamatti\\Anaconda3\\envs\\tf_nptel\\lib\\site-packages\\numpy\\.libs\\libopenblas.TXA6YQSD3GCQQC22GEQ54J2UDCXDXHWN.gfortran-win_amd64.dll\n",
-      "  stacklevel=1)\n",
-      "WARNING (theano.configdefaults): g++ not available, if using conda: `conda install m2w64-toolchain`\n",
-      "C:\\Users\\Arjun Janamatti\\Anaconda3\\envs\\tf_nptel\\lib\\site-packages\\theano\\configdefaults.py:697: UserWarning: DeprecationWarning: there is no c++ compiler.This is deprecated and with Theano 0.11 a c++ compiler will be mandatory\n",
-      "  \"DeprecationWarning: there is no c++ compiler.\"\n",
-      "WARNING (theano.configdefaults): g++ not detected ! Theano will be unable to execute optimized C-implementations (for both CPU and GPU) and will default to Python implementations. Performance will be severely degraded. To remove this warning, set Theano flags cxx to an empty string.\n",
-      "WARNING (theano.tensor.blas): Using NumPy C-API based implementation for BLAS functions.\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pymc3 as pm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-05-23T11:06:56.618636Z",
-     "start_time": "2021-05-23T11:06:56.609803Z"
+     "end_time": "2021-05-23T11:20:27.331571Z",
+     "start_time": "2021-05-23T11:20:27.316234Z"
     }
    },
    "outputs": [],
    "source": [
-    "def get_plausible_values(observed):\n",
+    "import pymc3 as pm\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-23T11:20:29.591799Z",
+     "start_time": "2021-05-23T11:20:29.572595Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def get_plausible_values(name, observed):\n",
     "    with pm.Model() as model_a:\n",
     "        # Parameter = prior solution space\n",
-    "        conversion_rate = pm.Beta(name='conversion_rate_a',\n",
+    "        conversion_rate = pm.Beta(name=name,\n",
     "                              alpha=2, \n",
     "                              beta=10)\n",
     "\n",
@@ -61,38 +46,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2021-05-23T11:07:21.724Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Arjun Janamatti\\Anaconda3\\envs\\tf_nptel\\lib\\site-packages\\pymc3\\sampling.py:468: FutureWarning: In an upcoming release, pm.sample will return an `arviz.InferenceData` object instead of a `MultiTrace` by default. You can pass return_inferencedata=True or return_inferencedata=False to be safe and silence this warning.\n",
-      "  FutureWarning,\n",
-      "Auto-assigning NUTS sampler...\n",
-      "Initializing NUTS using jitter+adapt_diag...\n",
-      "Multiprocess sampling (4 chains in 4 jobs)\n",
-      "NUTS: [conversion_rate_a]\n"
-     ]
-    }
-   ],
-   "source": [
-    "plausible_values_a = get_plausible_values(observed=7)\n",
-    "plausible_values_b = get_plausible_values(observed=17)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-05-23T10:59:39.473526Z",
-     "start_time": "2021-05-23T10:59:04.206262Z"
+     "end_time": "2021-05-23T11:21:56.288937Z",
+     "start_time": "2021-05-23T11:20:30.157480Z"
     }
    },
    "outputs": [
@@ -126,7 +84,7 @@
        "            }\n",
        "        </style>\n",
        "      <progress value='8000' class='' max='8000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      100.00% [8000/8000 00:12<00:00 Sampling 4 chains, 0 divergences]\n",
+       "      100.00% [8000/8000 00:15<00:00 Sampling 4 chains, 0 divergences]\n",
        "    </div>\n",
        "    "
       ],
@@ -141,53 +99,55 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Sampling 4 chains for 1_000 tune and 1_000 draw iterations (4_000 + 4_000 draws total) took 31 seconds.\n",
-      "The acceptance probability does not match the target. It is 0.880973690623816, but should be close to 0.8. Try to increase the number of tuning steps.\n",
-      "The acceptance probability does not match the target. It is 0.8899293872194785, but should be close to 0.8. Try to increase the number of tuning steps.\n"
+      "Sampling 4 chains for 1_000 tune and 1_000 draw iterations (4_000 + 4_000 draws total) took 35 seconds.\n",
+      "C:\\Users\\Arjun Janamatti\\Anaconda3\\envs\\tf_nptel\\lib\\site-packages\\pymc3\\sampling.py:468: FutureWarning: In an upcoming release, pm.sample will return an `arviz.InferenceData` object instead of a `MultiTrace` by default. You can pass return_inferencedata=True or return_inferencedata=False to be safe and silence this warning.\n",
+      "  FutureWarning,\n",
+      "Auto-assigning NUTS sampler...\n",
+      "Initializing NUTS using jitter+adapt_diag...\n",
+      "Multiprocess sampling (4 chains in 4 jobs)\n",
+      "NUTS: [conversion_rate_b]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "        <style>\n",
+       "            /* Turns off some styling */\n",
+       "            progress {\n",
+       "                /* gets rid of default border in Firefox and Opera. */\n",
+       "                border: none;\n",
+       "                /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
+       "                background-size: auto;\n",
+       "            }\n",
+       "            .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
+       "                background: #F44336;\n",
+       "            }\n",
+       "        </style>\n",
+       "      <progress value='8000' class='' max='8000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      100.00% [8000/8000 00:19<00:00 Sampling 4 chains, 0 divergences]\n",
+       "    </div>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Sampling 4 chains for 1_000 tune and 1_000 draw iterations (4_000 + 4_000 draws total) took 42 seconds.\n"
      ]
     }
    ],
    "source": [
-    "with pm.Model() as model_a:\n",
-    "    # Parameter = prior solution space\n",
-    "    conversion_rate = pm.Beta(name='conversion_rate_a',\n",
-    "                          alpha=2, \n",
-    "                          beta=10)\n",
-    "    \n",
-    "    # Evaluator = likelihodd function\n",
-    "    how_likely = pm.Binomial(name = 'how_likely', \n",
-    "                             n = 100, \n",
-    "                             p = conversion_rate, \n",
-    "                             observed = 7)\n",
-    "    \n",
-    "    # Posterior solution space\n",
-    "    plausible_values_a = pm.sample()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-05-23T11:02:24.886666Z",
-     "start_time": "2021-05-23T11:02:24.867200Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ True,  True,  True, ...,  True,  True,  True])"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# how many number of conversion rates are smaller than 0.1\n",
-    "plausible_values_a['conversion_rate_a'] < 0.1"
+    "plausible_values_a = get_plausible_values(name = 'conversion_rate_a', observed=7)\n",
+    "plausible_values_b = get_plausible_values(name = 'conversion_rate_b',observed=17)"
    ]
   },
   {
@@ -195,31 +155,61 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-23T11:02:39.149568Z",
-     "start_time": "2021-05-23T11:02:39.135554Z"
+     "end_time": "2021-05-23T11:21:56.474537Z",
+     "start_time": "2021-05-23T11:21:56.451215Z"
     }
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.7845"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "79.7 probability that the conversion rate is less than 10%\n"
+     ]
     }
    ],
    "source": [
-    "np.mean(plausible_values_a['conversion_rate_a'] < 0.1)"
+    "# how many number of conversion rates are smaller than 0.1\n",
+    "plausible_values_a['conversion_rate_a'] < 0.1\n",
+    "prob = np.mean(plausible_values_a['conversion_rate_a'] < 0.1)\n",
+    "print(f'{round(prob*100,2)} probability that the conversion rate is less than 10%')"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-23T11:21:56.643986Z",
+     "start_time": "2021-05-23T11:21:56.636182Z"
+    }
+   },
+   "outputs": [],
    "source": [
-    "* 78.45% probability that the conversion rate is less than 10 %"
+    "a_lt_b = (plausible_values_a['conversion_rate_a']) > (plausible_values_b['conversion_rate_b'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-23T11:21:56.845053Z",
+     "start_time": "2021-05-23T11:21:56.835323Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0 probability that the conversion rate a is greater than b\n"
+     ]
+    }
+   ],
+   "source": [
+    "prob_comparison = np.mean(a_lt_b)\n",
+    "print(f'{round(prob_comparison*100,2)} probability that the conversion rate a is greater than b')"
    ]
   },
   {
@@ -227,9 +217,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "a_lt_b = plausible_values_a"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -237,6 +225,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.10"
   },
   "varInspector": {
    "cols": {
