--- a/bayesian_made_simple/cookie_01.ipynb
+++ b/bayesian_made_simple/cookie_01.ipynb
@@ -341,6 +341,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Exercise 1_a\n",
+    "Instead of doing two updates, what if we collapse the two pieces of data into one update?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 101 Bowls\n",
     "\n",
     "Suppose instead of 2 bowls there are 101 bowls:\n",
