--- a/bayesian_made_simple/cookie_01.ipynb
+++ b/bayesian_made_simple/cookie_01.ipynb
@@ -2,24 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-17T06:30:50.729397Z",
-     "start_time": "2021-05-17T06:30:49.133189Z"
+     "end_time": "2021-05-23T11:42:59.675570Z",
+     "start_time": "2021-05-23T11:42:58.185689Z"
     }
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Arjun Janamatti\\Anaconda3\\envs\\tf_nptel\\lib\\site-packages\\numpy\\core\\__init__.py:29: UserWarning: loaded more than 1 DLL from .libs:\n",
-      "C:\\Users\\Arjun Janamatti\\Anaconda3\\envs\\tf_nptel\\lib\\site-packages\\numpy\\.libs\\libopenblas.PYQHXLVVQ7VESDPUVUADXEVJOBGHJPAY.gfortran-win_amd64.dll\n",
-      "C:\\Users\\Arjun Janamatti\\Anaconda3\\envs\\tf_nptel\\lib\\site-packages\\numpy\\.libs\\libopenblas.TXA6YQSD3GCQQC22GEQ54J2UDCXDXHWN.gfortran-win_amd64.dll\n",
-      "  stacklevel=1)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -57,11 +47,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-17T06:30:50.744829Z",
-     "start_time": "2021-05-17T06:30:50.733005Z"
+     "end_time": "2021-05-23T11:42:59.722995Z",
+     "start_time": "2021-05-23T11:42:59.709881Z"
     }
    },
    "outputs": [],
@@ -73,11 +63,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-17T06:30:50.806001Z",
-     "start_time": "2021-05-17T06:30:50.747064Z"
+     "end_time": "2021-05-23T11:42:59.769433Z",
+     "start_time": "2021-05-23T11:42:59.756543Z"
     }
    },
    "outputs": [],
@@ -95,11 +85,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-17T06:30:50.853156Z",
-     "start_time": "2021-05-17T06:30:50.810532Z"
+     "end_time": "2021-05-23T11:43:00.514830Z",
+     "start_time": "2021-05-23T11:43:00.457570Z"
     }
    },
    "outputs": [
@@ -158,7 +148,7 @@
        "Bowl_2     0.5        0.50                   0.250      0.625        0.4"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,11 +171,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-17T06:30:50.883612Z",
-     "start_time": "2021-05-17T06:30:50.855144Z"
+     "end_time": "2021-05-23T11:43:01.357649Z",
+     "start_time": "2021-05-23T11:43:01.336913Z"
     }
    },
    "outputs": [
@@ -244,7 +234,7 @@
        "Bowl_2     0.5        0.50                   0.250      0.625        0.4"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,11 +250,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-17T06:30:50.914463Z",
-     "start_time": "2021-05-17T06:30:50.886879Z"
+     "end_time": "2021-05-23T11:43:01.885513Z",
+     "start_time": "2021-05-23T11:43:01.857997Z"
     }
    },
    "outputs": [
@@ -323,7 +313,7 @@
        "Bowl_2     0.4        0.50                    0.20       0.35   0.571429"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,10 +337,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-23T11:43:03.912777Z",
+     "start_time": "2021-05-23T11:43:03.884885Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>priors</th>\n",
+       "      <th>likelihood</th>\n",
+       "      <th>unnormalized_posterior</th>\n",
+       "      <th>prob_data</th>\n",
+       "      <th>posterior</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Bowl_1</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.1875</td>\n",
+       "      <td>0.09375</td>\n",
+       "      <td>0.21875</td>\n",
+       "      <td>0.428571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bowl_2</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.2500</td>\n",
+       "      <td>0.12500</td>\n",
+       "      <td>0.21875</td>\n",
+       "      <td>0.571429</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        priors  likelihood  unnormalized_posterior  prob_data  posterior\n",
+       "Bowl_1     0.5      0.1875                 0.09375    0.21875   0.428571\n",
+       "Bowl_2     0.5      0.2500                 0.12500    0.21875   0.571429"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# in a single update\n",
+    "priors = [1/2, 1/2]\n",
+    "priors_index = ['Bowl_1', 'Bowl_2']\n",
+    "likelihood = [30/40 * 10/40, 10/20 * 10/20]\n",
+    "single_df = get_posterior(priors, priors_index, likelihood)\n",
+    "single_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Exercise 1_b\n",
+    "\n",
+    "First we pick up vanilla and second also is vanilla, what is probability that it is from bowl#01\n"
+   ]
   },
   {
    "cell_type": "markdown",
